--- a/frontend/html_files/vote.html
+++ b/frontend/html_files/vote.html
@@ -109,7 +109,7 @@
                   not be allowed to change your vote.
                 </p>
 
-                <div class="grid grid-cols-2 gap-8">
+                <div class="grid grid-cols-2 gap-8" id="candidate-list">
                   <div class="cursor-pointer rounded-sm">
                     <img src="https://img.freepik.com/free-photo/3d-rendering-male-character-profile-with-cream-hat-orange-polo-shirt-good-character-profile_477250-61.jpg?size=338&ext=jpg&ga=GA1.1.1906834557.1622206067" alt="voters image" srcset="" 
                     class="h-52 w-52">
