--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -187,7 +187,7 @@
                     <div class="my-5">
                       <div class="flex justify-center items-center">
                         <button type="button"
-                          id="btn-addStakeholder ;;"
+                          id="btn-addStakeholder"
                           class="rounded-full px-14 py-2 block w-100 bg-red-600 hover:bg-red-500 border-red-400">
                           Add StakeHolder</button>
                       </div>
