--- a/frontend/html_files/result.html
+++ b/frontend/html_files/result.html
@@ -95,7 +95,7 @@
               to change your vote.</p>
 
           </div>
-          <div class="grid grid-cols-1 md:grid-cols-4 my-32 gap-8 text-white">
+          <div class="grid grid-cols-1 md:grid-cols-4 my-32 gap-8 text-white" id="result list">
 
             <div>
               <div class="cursor-pointer rounded-sm">
