--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -190,6 +190,10 @@
                           id="btn-addStakeholder"
                           class="rounded-full px-14 py-2 block w-100 bg-red-600 hover:bg-red-500 border-red-400">
                           Add StakeHolder</button>
+                          <button type="button"
+                          id="btn-multipleaddStakeholder"
+                          class="rounded-full px-14 py-2 block w-100 bg-red-600 hover:bg-red-500 border-red-400">
+                          Add Multiple StakeHolder</button>
                       </div>
                     </div>
                   </form>
