--- a/frontend/html_files/result.html
+++ b/frontend/html_files/result.html
@@ -156,6 +156,37 @@
 
     </section>
 
+    <section class="container w-3/4 mx-auto text-zinc-600 p-5">
+      <div class="table-responsive" id="result table">
+        <table class="table table-striped table-light table-hover">
+          <thead>
+            <tr>
+              <th scope="col">#ID</th>
+              <th scope="col">Name</th>
+              <th scope="col">Address</th>
+              <th scope="col">Total Vote</th>
+              <th scope="col">Board Vote</th>
+              <th scope="col">Teachers Vote</th>
+              <th scope="col">Students Vote</th>
+              <th scope="col">Chairman Vote</th>
+            </tr>
+          </thead>
+          <tbody id="count-result">
+            <tr>
+              <th scope="row">1</th>
+              <td>Otto</td>
+              <td>0x756789dfghuj67890j</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>False</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+
     </main>
 
     </div>
