--- a/frontend/html_files/result.html
+++ b/frontend/html_files/result.html
@@ -156,7 +156,7 @@
 
     </section>
 
-    <section class="container w-3/4 mx-auto text-zinc-600 p-5">
+    <section class="container w-3/4 mx-auto p-5">
       <div class="table-responsive" id="result table">
         <table class="table table-striped table-light table-hover">
           <thead>
