--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -121,6 +121,9 @@
                 </div>
               </form>
 
+              <!-- stake holder -->
+              
+              <!-- stake holder emd -->
             </div>
 
 
@@ -184,16 +187,16 @@
                         <option value="0">Board of Directors</option>
                       </select>
                     </div>
-                    <div class="my-5">
-                      <div class="flex justify-center items-center">
-                        <button type="button"
-                          id="btn-addStakeholder"
-                          class="rounded-full px-14 py-2 block w-100 bg-red-600 hover:bg-red-500 border-red-400">
-                          Add StakeHolder</button>
-                          <button type="button"
-                          id="btn-multipleaddStakeholder"
-                          class="rounded-full px-14 py-2 block w-100 bg-red-600 hover:bg-red-500 border-red-400">
-                          Add Multiple StakeHolder</button>
+                    <div class="w-100 my-5">
+                      <div class="grid grid-cols-2 gap-4">
+                        <button type="button" id="btn-addStakeholder"
+                          class="rounded-full w-full px-4 py-1 text-sm block w-100 bg-red-600 hover:bg-red-500 border-green-400">
+                          Add StakeHolder
+                        </button>
+                        <button type="button" id="btn-multipleaddStakeholder"
+                          class="rounded-full w-full px-4 py-1 text-sm block w-100 bg-red-600 hover:bg-red-500 border-red-400">
+                         Add Multiple Stakeholder
+                        </button>
                       </div>
                     </div>
                   </form>
