--- a/frontend/html_files/result.html
+++ b/frontend/html_files/result.html
@@ -91,8 +91,7 @@
         <section class="w-4/5 mx-auto">
           <div class=" mt-14 text-white">
             <h3 class="text-2xl font-sans">Results</h3>
-            <p class="text-sm font-thin">Place your vote. Please note, you can only vote once. You will not be allowed
-              to change your vote.</p>
+            <p class="text-sm font-thin">Results of Zuri Online Vote</p>
 
           </div>
           <div class="grid grid-cols-1 md:grid-cols-4 my-32 gap-8 text-white" id="result list">
