Display the address of Current chairman Create UI

--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -87,6 +87,12 @@
           </div>
         </section>
         <!-- end of status bar -->
+        <section class="container w-1/2 mx-auto text-white">
+          <div class="flex items-center justify-center cursor-pointer">
+            <div class="bg-green-500 p-2 rounded-l-full text-sm">Chairman Address</div>
+            <div id="chairman-address" class="bg-zinc-800 p-2 rounded-r-full text-sm">Address</div>
+          </div>
+        </section>
 
         <section class="w-4/5 mx-auto">
           <div class="grid grid-cols-2 items-center my-32 gap-8 text-white">
@@ -197,7 +203,7 @@
                     <div class="my-8">
                       <input type="text" class="rounded-full w-full block w-100 px-4 py-2 bg-zinc-800"
                         placeholder="Input address" id="input-address">
-                        <br>
+                      <br>
                       <input type="file" class="rounded-full w-full block w-100 px-4 py-2 mt-3 bg-zinc-800"
                         placeholder="Input address" id="stakeholder-upload" accept=".xls,.xlsx">
                       <label for="roles" class="block my-5 text-sm font-medium text-zinc-400">Select Role</label>
