--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -89,7 +89,7 @@
         <!-- end of status bar -->
         <section class="container w-1/2 mx-auto text-white">
           <div class="flex items-center justify-center cursor-pointer">
-            <div class="bg-green-500 p-2 rounded-l-full text-sm">Chairman Address</div>
+            <div class="bg-green-600 p-2 rounded-l-full text-sm text-bold">Chairman Address</div>
             <div id="chairman-address" class="bg-zinc-800 p-2 rounded-r-full text-sm">Address</div>
           </div>
         </section>
