transfer chairman functionality hookup

--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -139,7 +139,7 @@
                       placeholder="Input address" id="newOwnership-address">
                   </div>
                   <div class="my-14">
-                    <button for="addFile" id="btn-addCandidate"
+                    <button for="addFile" id="btn-transferChairman"
                       class="block rounded-full w-full text-center hover:bg-red-500 border-red-400 px-8 py-2 bg-red-600">
                       Transfer ownership
                     </button>
