--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -90,7 +90,7 @@
         <section class="container w-1/2 mx-auto text-white">
           <div class="flex items-center justify-center cursor-pointer">
             <div class="bg-green-600 p-2 rounded-l-full text-sm text-bold">Chairman Address</div>
-            <div id="chairman-address" class="bg-zinc-800 p-2 rounded-r-full text-sm">Address</div>
+            <div id="chairman-address" class="bg-zinc-800 hover:bg-green-100 hover:text-green-900 p-2 rounded-r-full text-sm">Address</div>
           </div>
         </section>
 
