--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -56,6 +56,7 @@
             <div class="flex justify-around text-white items-center mx-12">
               <a href="./admin.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Admin</a>
               <a href="./vote.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Vote</a>
+              <a href="./stakeholders.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">StakeHolders</a>
               <a href="./result.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Result</a>
               <a href="#" style="font-size: 12px;" id="wallet-address"
                 class="font-sans text-sm font md:mx-3 py-2 px-5 bg-zinc-800 hover:bg-zinc-700 text-white rounded-full cursor-pointer">
