--- a/frontend/html_files/stakeholders.html
+++ b/frontend/html_files/stakeholders.html
@@ -14,7 +14,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet">
-    <title>results</title>
+    <title>Stake Holders</title>
   </head>
 
   <body class="bg-zinc-900 font-heading relative">
@@ -88,40 +88,34 @@
         </section>
         <!-- end of status bar -->
 
-        
 
-    <section class="container w-3/4 mx-auto p-5">
-      <div class="table-responsive" id="result table">
-        <table class="table table-striped table-light table-hover">
-          <thead>
-            <tr>
-              <th scope="col">#ID</th>
-              <th scope="col">Name</th>
-              <th scope="col">Address</th>
-              <th scope="col">Total Vote</th>
-              <th scope="col">Board Vote</th>
-              <th scope="col">Teachers Vote</th>
-              <th scope="col">Students Vote</th>
-              <th scope="col">Chairman Vote</th>
-            </tr>
-          </thead>
-          <tbody id="count-result">
-            <tr>
-              <th scope="row">1</th>
-              <td>Otto</td>
-              <td>0x756789dfghuj67890j</td>
-              <td>0</td>
-              <td>0</td>
-              <td>0</td>
-              <td>0</td>
-              <td>False</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </section>
 
-    </main>
+        <section class="container w-3/4 mx-auto p-5">
+
+          <div id="table-empty"
+            class="hidden mx-auto text-blue-900 sm:w-100 lg:w-1/2 w-3/4 text-center my-4 bg-blue-50 p-3 rounded border-blue-600">
+          </div>
+
+          <div class="table-responsive" id="result table">
+            <table class="table table-striped table-light table-hover">
+              <thead>
+                <tr>
+                  <th scope="col">#ID</th>
+                  <th scope="col">Role</th>
+                  <th scope="col">Address</th>
+                  <th scope="col">Vote Status</th>
+                  <th scope="col">Candidate</th>
+                  <th scope="col">Registered By</th>
+                </tr>
+              </thead>
+              <tbody id="stakeholder-list">
+
+              </tbody>
+            </table>
+          </div>
+        </section>
+
+      </main>
 
     </div>
 
