--- a/frontend/html_files/admin.html
+++ b/frontend/html_files/admin.html
@@ -54,7 +54,7 @@
           </div>
           <div class="flex justify-between items-center">
             <div class="flex justify-around text-white items-center mx-12">
-              <a href="./admin.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Admin</a>
+              <a href="./admin.html" class="lg:mx-10 text-red-500 mx-3 underline block">Admin</a>
               <a href="./vote.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Vote</a>
               <a href="./stakeholders.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">StakeHolders</a>
               <a href="./result.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">Result</a>
