--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,6 +57,7 @@
             <ul class="flex justify-around text-white items-center mx-2 lg:mx-3">
               <a href="./html_files/admin.html" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Admin</a>
               <a href="./html_files/vote.html" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Vote</a>
+              <a href="./html_files/stakeholders.html" class="lg:mx-10 hover:text-red-500 mx-3 underline block">StakeHolders</a>
               <a href="./html_files/result.html" class="lg:mx-10 hover:text-red-500 mx-5 underline block">Result</a>
               <span
               style="font-size: 12px;"
