--- a/frontend/html_files/stakeholders.html
+++ b/frontend/html_files/stakeholders.html
@@ -103,8 +103,7 @@
                 <tr>
                   <th scope="col">#ID</th>
                   <th scope="col">Role</th>
-                  <th scope="col">Address</th>
-                  <th scope="col">Vote Status</th>
+                  <th scope="col">StackHolder Address</th>
                   <th scope="col">Registered By</th>
                 </tr>
               </thead>
