commit update to new contract interaction frontend

--- a/frontend/html_files/result.html
+++ b/frontend/html_files/result.html
@@ -92,7 +92,7 @@
         <section id="winner-notification" class="hidden">
           <div
             class="relative bg-green-100 text-green-900 text-center p-10 rounded-md shadow-lg mx-auto w-1/2 border-green 500 text-2xl">
-            <h1>The Winner of the Election is <b id="winner-name">Abiola</b></h1>
+            <h1>The Winner of the Election is <b id="winner-name">not yet known</b></h1>
             <span id="cancle-btn"
               class="absolute top-0 right-0 text-green-900 font-semibold p-3 text-2xl cursor-pointer">&times;</span>
           </div>
